# gpu-classical-algorithms-lab

./: .gitignore  CMakeLists.txt  Install_and_execution guidelines.md  README.md  configure_ninja_cuda128.bat  error.txt  execute_all_tests.bat  execute_assignment_preprocessing_all_sweeps_and_analyze.bat  execute_assignment_preprocessing_plots.bat  execute_combination_finder_all_sweeps_and_analyze.bat  execute_constraint_network_all_sweeps_and_analyze.bat  execute_graph_bfs_all_sweeps_and_analyze.bat  execute_graph_bfs_scale_sweep.bat  execute_graph_bfs_shape_scale_sweep.bat  execute_graph_bfs_shapes.bat  execute_graph_connected_components_all_sweeps_and_analyze.bat  execute_graph_weighted_relaxation_all_sweeps_and_analyze.bat  execute_lecture_demo_core.bat  execute_local_search_moves_all_sweeps_and_analyze.bat  execute_local_search_moves_plots.bat  execute_scenario_simulation_all_sweeps_and_analyze.bat  execute_scenario_simulation_plots.bat  requirments.txt
apps/: cuda_probe.cpp  export_assignment_preprocessing.cpp  export_constraint_network.cpp  export_cost_matrix.cpp  export_graph_components.cpp  export_graph_foundation.cpp  export_local_search_moves.cpp  export_scenario_simulation.cpp  export_spatial_events.cpp  gpu_algobench.cpp  list_benchmarks.cpp  validate_all.cpp
docs/: 00_project_overview.md  01_benchmarking_methodology.md  02_gpu_pitfalls.md  03_results_format.md  appendix_graph_findings.md  assignment_preprocessing.md  constraint_network.md  cost_matrix.md  documentation_index.md  documentation_review_notes.md  final_benchmark_conclusions.md  final_report_outline.md  gpu_decision_guide.md  graph_bfs.md  graph_connected_components.md  graph_foundation.md  graph_weighted_relaxation.md  lecture_command_cheatsheet.md  lecture_demo_runner_fix.md  lecture_packaging.md  literature_and_problem_definitions.md  live_demo_script.md  local_search_moves.md  phase_01_cuda_runtime_diagnostics.md  phase_01_foundation.md  phase_01_test_runner.md  phase_01_tests.md  phase_02_cost_matrix.md  phase_02_polynomial_batch.md  phase_02_spatial_events.md  phase_03_graph_bfs.md  phase_03_graph_bfs_analysis.md  phase_03_graph_bfs_frontier_anatomy.md  phase_03_graph_bfs_jsonl_diagnostics.md  phase_03_graph_bfs_scaling.md  phase_03_graph_bfs_shape_scaling.md  phase_03_graph_bfs_single_runner.md  phase_03_graph_connected_components.md  phase_03_graph_connected_components_non_naive.md  phase_03_graph_connected_components_scaling.md  (+30 more)
include/assignment/: assignment_preprocessing.hpp
include/combinations/: combination_finder.hpp
include/common/: benchmark_config.hpp  benchmark_registry.hpp  benchmark_result.hpp  benchmark_timer.hpp  cli.hpp  cpu_check.hpp  cuda_check.cuh  device_info.hpp  json_writer.hpp  random_utils.hpp
include/constraints/: constraint_network.hpp
include/cost_matrix/: cost_matrix.hpp
include/foundation/: foundation_smoke.hpp
include/graph/: graph_bfs.hpp  graph_connected_components.hpp  graph_foundation.hpp  graph_weighted_relaxation.hpp
include/local_search/: local_search_moves.hpp
include/polynomial/: polynomial_batch.hpp
include/scenario/: scenario_simulation.hpp
include/spatial_events/: spatial_events.hpp
results/cost_matrix_tiny/: costs.csv  feasible.csv  metadata.json  resources.csv  tasks.csv
results/graph_bfs_layered_scale_plots/: graph_bfs_scaling_summary.csv
results/graph_bfs_shape_scale_plots/: graph_bfs_shape_scaling_summary.csv
results/graph_components_demo/: components.csv  edges.csv  metadata.json  nodes.csv
results/graph_connected_components_shape_scale_analysis/: graph_connected_components_analysis_report.md  graph_connected_components_analysis_summary.csv
results/graph_connected_components_shape_scale_plots/: graph_connected_components_shape_scaling_summary.csv
results/graph_foundation_demo/: manifest.json
results/graph_weighted_relaxation_backend_recommendations/: graph_weighted_relaxation_backend_recommendations.csv  graph_weighted_relaxation_backend_recommendations.md
results/graph_weighted_relaxation_delta_tuning_plots/: graph_weighted_delta_tuning_summary.csv
results/graph_weighted_relaxation_shape_scale_analysis/: graph_weighted_relaxation_analysis_report.md  graph_weighted_relaxation_analysis_summary.csv
results/graph_weighted_relaxation_shape_scale_plots/: graph_weighted_relaxation_shape_scaling_summary.csv
results/spatial_events_demo/: event_codes.csv  metadata.json  scores.csv  tracks.csv  triggered_events.csv  zones.csv
scripts/: analyze_assignment_preprocessing_jsonl.py  analyze_combination_finder_jsonl.py  analyze_constraint_network_jsonl.py  analyze_graph_bfs_jsonl.py  analyze_graph_connected_components_jsonl.py  analyze_graph_weighted_relaxation_jsonl.py  analyze_local_search_moves_jsonl.py  analyze_scenario_simulation_jsonl.py  compare_cpu_gpu.py  generate_report.py  plot_assignment_preprocessing_problem.py  plot_assignment_preprocessing_scaling.py  plot_combination_finder_scaling.py  plot_constraint_network_diagnostics.py  plot_constraint_network_problem.py  plot_constraint_network_scaling.py  plot_cost_matrix.py  plot_graph_bfs_scaling.py  plot_graph_bfs_shape_scaling.py  plot_graph_components.py  plot_graph_connected_components_scaling.py  plot_graph_foundation.py  plot_graph_weighted_delta_tuning.py  plot_graph_weighted_relaxation_scaling.py  plot_local_search_moves_problem.py  plot_local_search_moves_scaling.py  plot_results.py  plot_scenario_simulation_problem.py  plot_scenario_simulation_scaling.py  plot_spatial_events.py  recommend_graph_weighted_relaxation_backend.py  run_all_benchmarks.py
src/common/: cli.cpp  (+5 more)
tests/: test_assignment_preprocessing.cpp  test_cli.cpp  test_combination_finder.cpp  test_constraint_network.cpp  test_cost_matrix.cpp  test_device_info.cpp  test_foundation.cpp  test_graph_bfs.cpp  test_graph_connected_components.cpp  test_graph_foundation.cpp  test_graph_weighted_relaxation.cpp  test_json_writer.cpp  test_local_search_moves.cpp  test_polynomial.cpp  test_random_utils.cpp  test_registry.cpp  test_scenario_simulation.cpp  test_spatial_events.cpp  test_support.hpp
(+47 files in other folders)
